--- a/index.html
+++ b/index.html
@@ -205,28 +205,43 @@
           <h2 class="section-title">What are we doing</h2>
           <ul class="works list">
             <li class="item">
+              <picture>
+                <source srcset="./images/about/img1_desktop.jpg 1x, 
+                ./images/about/img1-desktop-2x.jpg 2x" 
+                media="(min-width: 1158px)">
               <img
                 src="./images/about/img1.jpg"
                 alt="Image of monitor"
                 width="360"
                 height="300"
               />
+              </picture>
             </li>
             <li class="item">
+              <picture>
+                <source srcset="./images/about/img2_desktop.jpg 1x, 
+                ./images/about/img2-desktop-2x.jpg 2x" 
+                media="(min-width: 1158px)">
               <img
                 src="./images//about/img2.jpg"
                 alt="Image of smartphone"
                 width="360"
                 height="300"
               />
+               </picture>
             </li>
             <li class="item">
+              <picture>
+                <source srcset="./images/about/img3_desktop.jpg 1x, 
+                ./images/about/img3-desktop-2x.jpg 2x" 
+                media="(min-width: 1158px)">
               <img
                 src="./images//about/img3.jpg"
                 alt="Image of notebook+smartphone"
                 width="360"
                 height="300"
               />
+               </picture>
             </li>
           </ul>
         </div>
@@ -237,12 +252,17 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team list">
             <li class="section-four-list-item">
+              <picture>
+                <source srcset="./images/team_photo/img-Mark-desktop.jpg 1x, 
+                ./images/team_photo/img-Mark-desktop-2x.jpg 2x" 
+                >
               <img
                 src="./images//team_photo/photo_Mark.jpg"
                 alt="Photo-of-Mark"
                 width="264"
                 height="260"
               />
+              </picture>
               <div class="team-name-profession">
                 <h3 class="section-header">Mark Guerrero</h3>
                 <p class="section-description">Product Designer</p>
@@ -279,12 +299,17 @@
               </div>
             </li>
             <li class="section-four-list-item">
+              <picture>
+                <source srcset="./images/team_photo/img-Tom-desktop.jpg 1x, 
+                ./images/team_photo/img-Tom-desktop-2x.jpg 2x" 
+                >
               <img
                 src="./images/team_photo/photo_Tom.jpg"
                 alt="Photo-of-Tom"
                 width="264"
                 height="260"
               />
+              </picture>
               <div class="team-name-profession">
                 <h3 class="section-header">Tom Ford</h3>
                 <p class="section-description">Frontend Developer</p>
@@ -321,12 +346,17 @@
               </div>
             </li>
             <li class="section-four-list-item">
+              <picture>
+                <source srcset="./images/team_photo/img-Camila-desktop.jpg 1x, 
+                ./images/team_photo/img-Camila-desktop-2x.jpg 2x" 
+                >
               <img
                 src="./images//team_photo/photo_Camila.jpg"
                 alt="Photo of Camila"
                 width="264"
                 height="260"
               />
+              </picture>
               <div class="team-name-profession">
                 <h3 class="section-header">Camila Garcia</h3>
                 <p class="section-description">Marketing</p>
@@ -363,12 +393,17 @@
               </div>
             </li>
             <li class="section-four-list-item">
+              <picture>
+                <source srcset="./images/team_photo/img-Daniel-desktop.jpg 1x, 
+                ./images/team_photo/img-Daniel-desktop-2x.jpg 2x" 
+                >
               <img
                 src="./images//team_photo/photo_Daniel.jpg"
                 alt="Photo of Daniel"
                 width="264"
                 height="260"
               />
+              </picture>
               <div class="team-name-profession">
                 <h3 class="section-header">Daniel Wilson</h3>
                 <p class="section-description">UI Designer</p>
